--- a/_posts/2024-05-31-first.md
+++ b/_posts/2024-05-31-first.md
@@ -7,6 +7,4 @@ title:  "테스트 포스팅"
 
 끼요옷
 
-
-
-<img src="D:\vscode-coding\CampVsCode\nodeProject\깃허브 프로필\PachyuChepe.github.io\images\2024-05-31-first\[크기변환]6BCaly_IHOsGCno5SofR4NCvQZQp7JzBSaPrRXivLldaA-Rbuceh1oDMN6LfUuZiScaR2eBK7-sGgB-xae_YWA.png" alt="[크기변환]6BCaly_IHOsGCno5SofR4NCvQZQp7JzBSaPrRXivLldaA-Rbuceh1oDMN6LfUuZiScaR2eBK7-sGgB-xae_YWA" style="zoom:25%;" />
+<img src="../images/2024-05-31-first/2024-05-31-first/[크기변환]flat,1000x1000,075,f.u3.jpg" alt="[크기변환]flat,1000x1000,075,f.u3" style="zoom:25%;" />
